# wasm-plugins

./: Cargo.toml  README.md  compose.wac  make_plugin.sh
adapter/: Cargo.toml
adapter/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs
app2/: Cargo.toml
app2/src/: main.rs
plugin1/: Cargo.toml
plugin1/src/: lib.rs
plugin2/: Cargo.toml
plugin2/src/: lib.rs
plugin3/: Cargo.toml
plugin3/src/: lib.rs
wit/: plugin.wit
